# AssayingAnomalies-Python

./: .coverage  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PORTING.md  README.md  REPLICATION.md  REPRODUCIBILITY.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  verification_report.json
.github/workflows/: tests.yml
aa/: __init__.py
aa/analysis/: __init__.py  anomaly_metrics.py  anomaly_pipeline.py  anomaly_ranking.py
aa/asset_pricing/: __init__.py  characteristic.py  double_sort.py  double_sorts.py  factor_tests.py  fama_macbeth.py  univariate.py
aa/data/: synthetic_generator.py
aa/export/: replication.py
aa/pipeline/: run_anomaly_library.py
aa/prep/: build_panel.py  compustat.py
aa/replication/: __init__.py  runner.py
aa/reporting/: anomaly_tables.py  export_utils.py  library_tables.py  paper_tables.py  stability_tables.py  tables.py
aa/tests/: __init__.py  conftest.py  test_anomaly_metrics.py  test_anomaly_pipeline.py  test_anomaly_ranking.py  test_double_sorts.py  test_export_utils.py  test_factor_tests.py  test_library_tables.py  test_output_consistency.py  test_paper_tables.py  test_reproducibility.py  test_translation_coverage.py  test_validation.py
aa/util/: __init__.py  artifact_metadata.py  experiment.py  output_manifest.py  reproducibility.py  statistics.py
aa/validation/: __init__.py  matlab_parity.py  output_consistency.py
aa/vis/: paper_figures.py
artifact/: manifest.json  metadata.json
artifact/reports/: verification_report.json
assaying_anomalies.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assayinganomalies.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture.md  archival_documentation.md  data_interface.md  developer_guide.md  matlab_python_mapping.md  project_completion_report.md  replication_guide.md  translation_completion_report.md  usage_guide.md  validation_process.md
examples/: basic_usage.py  demo_assaying_anomalies_pipeline.py  usage_walkthrough.py
notebooks/: assaying_anomalies_quickstart.ipynb
replication/configs/: size_anomaly.yaml
replication/logs/: size_anomaly_reproducibility.json
replication/outputs/size_anomaly/: lambda_ts.csv  lambdas.csv  manifest.json  n_obs.csv  se.csv  summary.csv  time_series.csv  tstat.csv
replication/scripts/: README.md
scripts/: __init__.py  build_research_artifact.py  check_translation_coverage.py  create_release_assets.py  create_versioned_release.py  generate_replication_summary.py  prepare_final_release.py  repository_health_check.py  reproduce_assaying_anomalies.py  run_full_library_replication.py  run_replication_experiment.py  run_repo_diagnostics.py  verify_full_project.py
tests/: test_artifact_generation.py  test_full_pipeline.py  test_integration.py  test_milestone4.py  test_replication_runner.py  test_signals.py
