[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "assaying-anomalies"
version = "1.0.0"
description = "Python translation of the Assaying Anomalies MATLAB library for anomaly evaluation and portfolio sorting"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Assaying Anomalies Development Team", email = "maintainers@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.21",
    "scipy>=1.7",
    "statsmodels>=0.14",
    "matplotlib>=3.5",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "pyarrow>=10.0",
    "polars>=0.18"
    "PyYAML>=6.0"
    "types-PyYAML"
]
keywords = [
    "finance",
    "asset pricing",
    "anomalies",
    "fama macbeth",
    "portfolio sorts",
    "cross-sectional return predictors"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=5.0",
    "scipy-stubs"
]

[project.urls]
Homepage = "https://github.com/Hello-Surya/AssayingAnomalies-Python"
Documentation = "https://github.com/Hello-Surya/AssayingAnomalies-Python/tree/main/docs"
Source = "https://github.com/Hello-Surya/AssayingAnomalies-Python"
BugTracker = "https://github.com/Hello-Surya/AssayingAnomalies-Python/issues"

[tool.setuptools]
packages = ["aa"]

[tool.setuptools.package-dir]
aa = "aa"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true